# Eclipse-API-CS2

./: LICENSE  README.md  offsets.cfg  offsets.json  pyproject.toml  test_api.py
ExternalAPI/: MANIFEST.in  __init__.py  requirements.txt
ExternalAPI/include/: __init__.py
ExternalAPI/include/Api/: manager.py  parser.py
ExternalAPI/include/core/: edit.py  get.py  inject.py  manager.py  pars.py
include/: validation.py
include/Api/: __init__.py  parser.py
include/core/: __init__.py  memory.py
